<resources>
    <string name="app_name">LoginRegister</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="signuphere">Create a new Account? Sign Up</string>
</resources>